# HECO

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Doxyfile  INSTALL.md  LICENSE  MarbleHE_CPP_Code_Style.xml  README.md  add_license.sh  ast_optConfig.cmake.in  benchmarks.yml  main.cpp  main.h  out.mlir
bench/: BenchmarkHelper.h  BoxBlur.cpp  BoxBlur.h  BoxBlurBench.cpp  CMakeLists.txt  DotProduct.cpp  DotProduct.h  DotProductBench.cpp  GxKernel.cpp  GxKernel.h  GxKernelBench.cpp  GyKernel.cpp  GyKernel.h  HammingDistance.cpp  HammingDistance.h  HammingDistanceBench.cpp  L2Distance.cpp  L2Distance.h  L2DistanceBench.cpp  LaplaceSharpening.cpp  LaplaceSharpening.h  LinearKernel.cpp  LinearKernel.h  LinearPolynomial.cpp  LinearPolynomial.h  LinearPolynomialBench.cpp  MultiTimer.h  QuadraticPolynomial.cpp  QuadraticPolynomial.h  QuadraticPolynomialBench.cpp  RobertsCross.cpp  RobertsCross.h  RobertsCrossBench.cpp
cmake/modules/: AddHECO.cmake  CMakeLists.txt  HECOConfig.cmake.in
frontend/heco/: README.md  pyproject.toml  requirements.txt  setup.cfg
mlir/: CMakeLists.txt  README.md
mlir/abc-opt/: Batching.cpp  CMakeLists.txt  LowerASTtoSSA.cpp  LowerASTtoSSA.h  Nary.cpp  Nary.h  UnrollLoops.cpp  UnrollLoops.h  abc-opt.cpp
mlir/abc-translate/: CMakeLists.txt  abc-translate.cpp
mlir/fhe-opt/: CMakeLists.txt  LowerFHEtoPoly.cpp  LowerFHEtoPoly.h  LowerFHEtoPoly.td  fhe-opt.cpp
mlir/include/: CMakeLists.txt
mlir/include/ABC/: ABCDialect.h  ABCDialect.td  ABCOps.h  ABCOps.td
mlir/include/FHE/: FHEDialect.h  FHEDialect.td  FHEOps.td
mlir/lib/ABC/: ABCDialect.cpp  ABCOps.cpp  CMakeLists.txt
mlir/lib/FHE/: CMakeLists.txt  FHEDialect.cpp
mlir/python/: CMakeLists.txt
mlir/python/pyabc/: ABCVisitor.py  (+3 more)
mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
python/: .gitignore  CMakeLists.txt  README.md  setup.py.in
python/examples/: example_basic.py  example_boxblur.py  example_fn_call.py
python/pyabc/: ABCASTBackend.py  ABCBackend.py  ABCContext.py  ABCGenericExpr.py  ABCJsonAstBuilder.py  ABCMLIRTextBackend.py  ABCMLIRTextBuilder.py  ABCProgram.py  ABCTypes.py  ABCVisitor.py  CMakeLists.txt  FunctionVisitor.py  JSONVisitor.py  __init__.py  abc_wrapper.cpp  pyabc.py
src/legacy_ast/: CMakeLists.txt
test/: ASTComparison.cpp  ArithmeticExprTest.cpp  AstClassTest.cpp  AstEvaluationTest.cpp  AstSimplificationTests.cpp  AstTestingGenerator.cpp  AstTestingGenerator.h  BatchingCheckerTest.cpp  BenchMarkEPFLModSwitch_add.cpp  BenchMarkEPFLModSwitch_bar.cpp  BenchMarkEPFL_ModSwitch_max.cpp  BenchmarkingSeal.cpp  BinaryExpr-test.cpp  BinaryExprTest.cpp  CMakeLists.txt  ChildParentTest.cpp  CiphertextTest.cpp  CompileTimeExpressionSimplifierTest.cpp  ConeRewriterTest.cpp  ControlFlowGraphVisitorTest.cpp  DotPrinterTest.cpp  EvaluationVisitorTest.cpp  InsertModSwitches_EPFLTruncated.cpp  JsonOutputTest.cpp  LiteralTest.cpp  MatrixTest.cpp  MultDepthVisitorTest.cpp  MultRewriteTest.cpp  NodeCloneRecursiveDeepTest.cpp  NodeTest.cpp  NodeUtilsTest.cpp  OperatorExprTest.cpp  PrintVisitorTest.cpp  RuntimeVisitorTest.cpp  SecretTaintingTest.cpp  TruncateEPFLCircuits.cpp  example.mlir  readme.md
test/ABC/: boxblur_rewritten.mlir  hammingdist_ssa.batched.mlir  hammingdist_ssa.unrolled.mlir
test/FHE/: generic_syntax.mlir
test/IR/: CMakeLists.txt
test/MLIR/: CMakeLists.txt  lit.cfg.py
test/ast/: ASTComparison.cpp  ASTComparison.h  AssignmentTest.cpp  BinaryExpressionTest.cpp  BlockTest.cpp  CallTest.cpp  ExpressionListTest.cpp  ForTest.cpp  FunctionParameterTest.cpp  FunctionTest.cpp  IfTest.cpp  IndexAccessTest.cpp  LiteralTest.cpp  OperatorExpressionTest.cpp  ReturnTest.cpp  TernaryOperatorTest.cpp  UnaryExpressionTest.cpp  VariableAssignmentTest.cpp  VariableDeclarationTest.cpp  VariableTest.cpp
test/ast_parser/: ParserTest.cpp  TokenizerTest.cpp
test/ast_visitor/: PrintVisitorTest.cpp  ProgramPrintVisitorTest.cpp  VisitorTest.cpp
test/bench/: BenchmarkHelper.h  BoxBlur.cpp  CMakeLists.txt  DotProduct.cpp  DotProduct.h  DotProductBench.cpp  GxKernel.cpp  GxKernel.h  GxKernelBench.cpp  GyKernel.h  GyKernelBench.cpp  HammingDistance.cpp  HammingDistance.h  HammingDistanceBench.cpp  L2Distance.cpp  L2Distance.h  LaplaceSharpening.h  LinearPolynomial.cpp  LinearPolynomial.h  MultiTimer.cpp  QuadraticPolynomial.cpp  RobertsCross.cpp  RobertsCrossBench.cpp
test/compiler/: CompileDotProductTest.cpp
test/end-to-end/: BoxBlurBench.cpp  BoxBlurTest.cpp  BoxBlurTest.h  CardioTest.cpp  DotProductTest.cpp  GxKernelTest.cpp  GxKernelTest.h  GyKernelTest.cpp  HammingDistanceTest.cpp  HammingDistanceTest.h  KernelTest.cpp  L2DistanceTest.cpp  L2DistanceTest.h  LaplaceSharpeningTest.cpp  LinearKernelTest.cpp  LinearPolynomialTest.cpp  MatrixVectorProduct.cpp  MatrixVectorProductTest.cpp  PolynomialKernelTest.cpp  QuadraticPolynomialTest.cpp  RobertsCrossTest.cpp  RobertsCrossTest.h  TestHelper.h
test/evaluation/: CMakeLists.txt
test/filecheck/: CMakeLists.txt  lit.cfg.py
test/mlir/: CMakeLists.txt
test/parser/: ParserTest.cpp  ParserTestHelpers.h  TokenizerTest.cpp  test.stk
test/python/: eigenfaces.py  private_set_union.py
test/python_frontend/: CMakeLists.txt  simple.py  test_external_fn.py  test_external_fn_helper.py  test_hamming_distance.py  test_matrix_vector_product.py  test_mlir_translation.py  test_secret_tainting.py  test_simple.py
test/runtime/: DummyCiphertextFactoryTest.cpp  RunTimeOpCounterTest.cpp  RunTimeVisitorSimulatorTest.cpp  RuntimeVisitorTest.cpp  SealCiphertextFactoryTest.cpp  SimulatorCiphertextFactoryTest.cpp
test/utilities/: ConeRewriterTest.cpp  VeriLogToDslTest.cpp
test/visitor/: AvoidParameterMismatchVisitorTest.cpp  ControlFlowGraphVisitorTest.cpp  CountOpsVisitorTest.cpp  ExpressionBatcherTest.cpp  FixParameterMismatchVisitorTest.cpp  IdentifyNoisySubtreeVisitorTest.cpp  InsertModSwitchAlgoTest.cpp  InsertModSwitchVisitorTest.cpp  NoiseVisitorTest.cpp  PrintVisitorTest.cpp  ProgramPrintVisitorTest.cpp  ScopedVisitorTest.cpp  SecretBranchingVisitorTest.cpp  TypeCheckingVisitorTest.cpp  VectorizerTest.cpp  VisitorTest.cpp
(+1717 files in other folders)
